# SOC-25

./: BollingerBands.cpp  BollingerBands.h  CMakeLists.txt  Fibonacci.cpp  Fibonacci.h  MACD.cpp  MACD.h  README.md  cppbindings.cpp  data_processor.py  main.py  model.py
final/: BollingerBands.cpp  BollingerBands.h  CMakeLists.txt  Fibonacci.cpp  Fibonacci.h  MACD.cpp  MACD.h  cppbindings.cpp  data_processor.py  main.py  model.py
